src/objects/LASH_Subscription__c.object
<CustomObject>
    <description>Portal Object : Object for managing a provider&apos;s access to portal following a registration.</description>
    <fields>
        <fullName>LASH_Applicable_Special_Character__c</fullName>
        <label>Applicable Special Character</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Client__c</fullName>
        <description>Manufacturer relationship with Subnscriptions</description>
        <label>Client</label>
        <referenceTo>Lash_Client__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LASH_IsLowerCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLowerCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_IsNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_IsSpecialCharacter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSpecialCharacter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_IsUppercase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUppercase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_Min_Length_of_Password__c</fullName>
        <label>Min. Length of Password</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_QDE_External_ID__c</fullName>
        <description>This field is created as part of QDE Module</description>
        <externalId>true</externalId>
        <label>QDE External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Security_Questions__c</fullName>
        <label>Security Questions</label>
        <picklist>
            <picklistValues>
                <fullName>In what city were you born?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is your mother&apos;s maiden name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is your pet&apos;s name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What was your childhood nickname?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In what city did you meet your spouse/significant other?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is the name of your favourite childhood friend?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In what city was your first job?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LASH_Subscription_expiry_Date__c</fullName>
        <description>Password Expiry Date Counter : we need to set the date as per the Subscription Password Policy .</description>
        <inlineHelpText>Password Expiry Date Counter : we need to set the date as per the Subscription Password Policy .</inlineHelpText>
        <label>Subscription expiry  Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Temporary_Password_Expiration__c</fullName>
        <label>Temporary Password Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lash_Maxx_Inaffiliation_Days__c</fullName>
        <label>Max Inaffiliation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accept_only_Alphanumeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Name , &quot;[a-zA-Z0-9]+&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Special Characters and spaces not allowed</errorMessage>
    </validationRules>
</CustomObject>